# cadence

./: .gitignore  Dockerfile.sandbox  LICENSE  README.md  pyproject.toml
agent/: __main__.py  clarify.py  execution.py  feasibility.py  generation.py  governance.py  graph.py  graph_state.py  hybrid_retriever.py  intent.py  lexical_retriever.py  llm.py  observability.py  pipeline.py  plan.py  planner.py  prompts.py  python_step.py  query_enhance.py  safety.py  sandbox.py  schema_relations.py  semantic_consistency.py  semantic_layer.py  semantic_layer_metrics.json  stats.py  tools.py  usage.py  validate.py
demo/: app.py
evalharness/: classification_metrics.py  computation_oracle.py  consistency_eval.py  gate_eval.py  golden.py  oracle.py  sandbox_eval.py
evals/: clarification_smoke.py  run_consistency.py  run_sandbox.py  scorecard.py
scripts/: sandbox_smoke.py
tests/: conftest.py  test_clarification_smoke.py  test_clarify.py  test_clarify_semantic_layer.py  test_clarify_toggle.py  test_classification_metrics.py  test_computation_oracle.py  test_consistency_eval.py  test_db.py  test_demo.py  test_eval_drivers.py  test_execution.py  test_feasibility.py  test_gate_eval.py  test_golden.py  test_governance.py  test_graph.py  test_hybrid_retriever.py  test_intent.py  test_lexical_retriever.py  test_observability.py  test_oracle.py  test_pipeline.py  test_plan.py  test_plan2_e2e.py  test_plan3_e2e.py  test_plan_approval.py  test_planner.py  test_python_step.py  test_query_enhance.py  test_saas_db.py  test_saas_fixtures.py  test_safety.py  test_sandbox.py  (+10 more)
(+10 files in other folders)
