[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cadence"
version = "0.1.0"
description = "A planner-driven SaaS-metrics data agent with a built-in evaluation & reliability harness."
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-deepseek",
    "sqlglot",
    "python-dotenv",
    "fastembed",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["agent*", "evalharness*"]
